--- a/site/tsconfig.json
+++ b/site/tsconfig.json
@@ -1,9 +1,4 @@
 {
   // https://nuxt.com/docs/guide/concepts/typescript
-  "extends": "./.nuxt/tsconfig.json",
-  "compilerOptions": {
-    "paths": {
-      "xdi8-transcriber": ["../package/src/index"]
-    }
-  }
+  "extends": "./.nuxt/tsconfig.json"
 }
