--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -12,7 +12,7 @@ jobs:
         (
           contains(github.event.head_commit.message, '@@__LNN_NO_BUILD__@@') ||
           (
-            github.event.head_commit.author.name == "dependabot[bot]" &&
+            github.event.head_commit.author.name == 'dependabot[bot]' &&
             contains(github.event.head_commit.message, 'updated-dependencies:')
           )
         )
