--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -24,11 +24,12 @@ jobs:
       with:
         node-version: 16
         cache: npm
+      working-directory: ./site
     - name: Install and build
       run: |
-        cd site
         npm install --legacy-peer-deps
         npm run build
+      working-directory: ./site
     - name: Upload GitHub Pages artifact
       uses: actions/upload-pages-artifact@v1.0.6
       with:
