--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -4,7 +4,7 @@ on:
     branches: [ main ]
   workflow_dispatch: { }
 jobs:
-  pages:
+  build:
     if: >
       !(
         github.event_name == 'push' &&
@@ -18,19 +18,40 @@ jobs:
         )
       )
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: site
     steps:
-    - uses: actions/checkout@v3
-    - uses: actions/setup-node@v3
+    - name: Checkout
+      uses: actions/checkout@v3
+    - name: Setup Node
+      uses: actions/setup-node@v3
       with:
         node-version: 16
         cache: npm
-      working-directory: ./site
-    - name: Install and build
-      run: |
-        npm install --legacy-peer-deps
-        npm run build
-      working-directory: ./site
-    - name: Upload GitHub Pages artifact
-      uses: actions/upload-pages-artifact@v1.0.6
+    - name: Restore cache
+      uses: actions/cache@v3
       with:
-        path: 'site/.output/public/'
+        path: |
+          site/.nuxt
+        key: ${{ runner.os }}-nuxt-${{ hashFiles('site/.nuxt') }}
+        restore-keys: |
+          ${{ runner.os }}-nuxt-
+    - name: Install dependencies
+      run: npm install
+    - name: Build
+      run: npm run build
+    - name: Upload artifact
+      uses: actions/upload-pages-artifact@v1
+      with:
+        path: site/dist
+  deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v1
