chore: add global build scripts

--- a/package.json
+++ b/package.json
@@ -3,5 +3,9 @@
   "workspaces": [
     "package",
     "site"
-  ]
+  ],
+  "scripts": {
+    "build:package": "npm run --workspace=package build",
+    "build:site": "npm run --workspace=package build:data & npm run --workspace=site build"
+  }
 }
