--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -18,9 +18,6 @@ jobs:
         )
       )
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: site
     steps:
     - name: Checkout
       uses: actions/checkout@v3
@@ -38,9 +35,9 @@ jobs:
         restore-keys: |
           ${{ runner.os }}-nuxt-
     - name: Install dependencies
-      run: npm install
+      run: npm install --workspace=site
     - name: Build
-      run: npm run build
+      run: npm run build:site
     - name: Upload artifact
       uses: actions/upload-pages-artifact@v1
       with:
