chore(site): fix github actions workflow

--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -3,6 +3,16 @@ on:
   push:
     branches: [ main ]
   workflow_dispatch: { }
+
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
+concurrency:
+  group: "pages"
+  cancel-in-progress: true
+
 jobs:
   build:
     if: >
@@ -42,6 +52,7 @@ jobs:
       uses: actions/upload-pages-artifact@v1
       with:
         path: site/dist
+
   deploy:
     environment:
       name: github-pages
