chore(site): fix typo
@@__LNN_NO_BUILD__@@

--- a/package.json
+++ b/package.json
@@ -6,6 +6,6 @@
   ],
   "scripts": {
     "build:package": "npm run --workspace=package build",
-    "build:site": "npm run --workspace=package build:data & npm run --workspace=site build"
+    "build:site": "npm run --workspace=package build:data && npm run --workspace=site build"
   }
 }
