chore: add npm build to build both package and site

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "site"
   ],
   "scripts": {
+    "build": "npm run --workspace=package build && npm run --workspace=site build",
     "build:package": "npm run --workspace=package build",
     "build:site": "npm run --workspace=package build:data && npm run --workspace=site build"
   }
