--- a/package/src/.eslintrc.yml
+++ b/package/src/.eslintrc.yml
@@ -1,16 +1,20 @@
+root: true
+ignorePatterns:
+  - "**/*.js"
 env:
   es2021: true
   node: true
 extends:
   - eslint:recommended
-  - plugin:@typescript-eslint/recommended
-parser: '@typescript-eslint/parser'
+  - plugin:@typescript-eslint/recommended-type-checked
+parser: "@typescript-eslint/parser"
 parserOptions:
+  project: true
   ecmaVersion: latest
   sourceType: module
 plugins:
-  - '@typescript-eslint'
+  - "@typescript-eslint"
 rules:
-  '@typescript-eslint/no-extra-semi': 'off'
-  'prefer-const': 'off'
-  '@typescript-eslint/no-non-null-assertion': 'off'
+  "@typescript-eslint/no-extra-semi": "off"
+  "prefer-const": "off"
+  "@typescript-eslint/no-non-null-assertion": "off"
