--- a/site/package.json
+++ b/site/package.json
@@ -6,8 +6,9 @@
     "postinstall": "nuxi prepare"
   },
   "devDependencies": {
-    "nuxt": "^3.7.0",
-    "bootstrap": "^5.3.1",
-    "bootstrap-vue-next": "^0.10.10"
+    "@bootstrap-vue-next/nuxt": "^0.16.6",
+    "bootstrap": "^5.3.3",
+    "bootstrap-vue-next": "^0.16.6",
+    "nuxt": "^3.11.1"
   }
 }
