refactor: exclude data.json from bundling
The index.js/mjs bundles in lib/ now import the data.json instead of having it bundled. lib/index.mjs uses the import attributes syntax (`with { type: "json" }`). For browser usage, we now export a separate dist/index.min.js bundle which includes the data.json.

--- a/package/tsconfig.json
+++ b/package/tsconfig.json
@@ -8,7 +8,8 @@
     "types": ["mocha"],
     "target": "es6",
     "outDir": "lib",
-    "module": "CommonJS",
+    "module": "esnext",
+    "moduleResolution": "bundler",
     "declaration": true,
     "emitDeclarationOnly": true,
     "diagnostics": true,
