--- a/package/package.json
+++ b/package/package.json
@@ -1,6 +1,6 @@
 {
   "name": "xdi8-transcriber",
-  "version": "0.3.6",
+  "version": "0.3.7",
   "keywords": [
     "shidinn",
     "xdi8",
@@ -9,28 +9,26 @@
   "description": "Transcribe Hanzi characters into Shidinn, a constructed language, and vice versa. 〇改希顶语字表转写模块",
   "author": "DGCK81LNN <triluolnn@163.com>",
   "license": "MIT",
-  "files": [
-    "lib/**/*"
-  ],
+  "files": ["lib", "dist"],
   "main": "lib/index.js",
   "module": "lib/index.mjs",
   "types": "lib/index.d.ts",
+  "browser": "dist/index.min.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/DGCK81LNN/xdi8-transcriber.git"
   },
   "devDependencies": {
-    "@types/lodash": "^4.17.0",
-    "@types/mocha": "^10.0.6",
+    "@types/lodash": "^4.17.20",
+    "@types/mocha": "^10.0.10",
     "@typescript-eslint/eslint-plugin": "^7.3.1",
-    "earl": "^1.1.0",
-    "esbuild": "^0.20.2",
-    "esbuild-plugin-umd-wrapper": "^2.0.0",
+    "earl": "^1.3.0",
+    "esbuild": "^0.25.5",
     "eslint": "^8.57.0",
     "lodash": "^4.17.21",
     "mocha": "^10.3.0",
     "ts-node": "^10.9.2",
-    "typescript": "^5.4.3"
+    "typescript": "^5.8.3"
   },
   "directories": {
     "test": "test"
