--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -71,6 +71,7 @@ jobs:
       matrix:
         environment:
           - vudrux.site
+          - xn--7wr.site
     steps:
       - name: Download built site
         uses: actions/download-artifact@v4
